--- a/boomgame.html
+++ b/boomgame.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>hello in scrath games</h1>
-    <a href="boomkidsph.html">back</a>
+    <a href="index.html">back</a>
     <p>To publish a Scrath game, ask your father and mother, and if they agree, send it to<a href="mailto: superanimfx@gmail.com">superanimfx@gmail.com</a></p>
     <iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><iframe src="" width="200" height="200"></iframe><br><style>    
         body {
