--- a/boomclub.html
+++ b/boomclub.html
@@ -8,7 +8,7 @@
 <body>
     <h1>join club</h1>
     <form action="https://formsubmit.co/superanimfx@gmail.com" method="post">Your name<input type="name"><br>Your hobby<input type="text"><br>Your age<input type="number"><a href="boomkidsph.html"><button type="submit">join</button></a></form><br><br>
-    <a href="boomkidsph.html">back</a>
+    <a href="index.html">back</a>
     <style>
         body {
             background: #ff0049;
