--- a/boomimage.html
+++ b/boomimage.html
@@ -9,7 +9,7 @@
     <h1>hello in images</h1>
     <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">   <img src="" alt="nothing">
     <p>Ask your mom or dad to post a selfie and drawings and send a picture <a href="mailto: superanimfx@gmail.com">here</a></p>
-    <br><br><a href="boomkidsph.html">back</a>
+    <br><br><a href="index.html">back</a>
     <style>
         body {
             background: #ff0049;
