--- a/Computer.html
+++ b/Computer.html
@@ -92,7 +92,7 @@ function handleKeyPress(key) {
     drawText(10, 10, key); // عرض الحرف على الشاشة
   }
 }</script>
-  <stlye>body {
+  <Style>body {
   font-family: Arial, sans-serif;
   background-color: #1e1e1e;
   color: #ffffff;
@@ -138,6 +138,6 @@ button:hover {
 
 button:active {
   background-color: #888888;
-}</stlye>
+}</style>
 </body>
       </html>
